Fix: Wood layout not fitting to page on small screens with no content.

--- a/src/styles/root-layout.module.scss
+++ b/src/styles/root-layout.module.scss
@@ -59,7 +59,7 @@ a.home-button {
 
   @include Mixins.mediaQuery(Theme.$SmPhoneViewport) {
     display: block;
-    width: fit-content;
+    width: 100%;
   }
   @include Mixins.mediaQuery(Theme.$microViewport) {
     @include Mixins.setImageValues() {
